@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.booksaw.betterTeams</groupId>
 	<artifactId>BetterTeams</artifactId>
-	<version>4.3.7</version>
+	<version>4.4.0</version>
 	<name>BetterTeams</name>
 	<packaging>jar</packaging>
 	<description>Create teams to fight to be the best</description>
@@ -33,8 +33,9 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.spigotmc</groupId>
-			<artifactId>spigot-api</artifactId>
-			<version>1.16.5-R0.1-SNAPSHOT</version>
+			<artifactId>spigot</artifactId>
+			<version>1.19-R0.1-SNAPSHOT</version>
+			<classifier>remapped-mojang</classifier>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
